[package]
name = "dmarc-email-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
clap = { version = "3", features = ["derive"] }
dmarc_aggregate_parser = "0.1.3"
flate2 = "1.0.22"
mailparse = "0.13.7"
thiserror = "1.0.30"
time = { version = "0.3.6", features = ["formatting"] }
zip = "0.5.13"
